[gd_scene load_steps=13 format=3 uid="uid://fjwsx18m1leh"]

[ext_resource type="Texture2D" uid="uid://c8g1hphv3dlwh" path="res://assets/Player1Icon1.png" id="1_3o71d"]
[ext_resource type="Script" path="res://scenes/scoreboard_and_icons.gd" id="1_4loom"]
[ext_resource type="Texture2D" uid="uid://b0qapbjpuj5dq" path="res://assets/Player2Icon1.png" id="2_7taoh"]
[ext_resource type="Texture2D" uid="uid://cs11xrdpsg31p" path="res://assets/Player1Icon.png" id="4_5o7c6"]
[ext_resource type="Texture2D" uid="uid://dsh7hc1fwgikp" path="res://assets/Player3/Player3Icon1.png" id="4_41w2r"]
[ext_resource type="Texture2D" uid="uid://dspnbtmhe57s" path="res://assets/Player4/Player4Icon1.png" id="5_tjjn8"]
[ext_resource type="Texture2D" uid="uid://dulap2b5mdlas" path="res://assets/Player2Icon.png" id="5_utxid"]
[ext_resource type="FontFile" uid="uid://dhoipivpdsyok" path="res://Fonts/ThaleahFat.ttf" id="6_iwl44"]
[ext_resource type="AudioStream" uid="uid://b747rv0c21pbt" path="res://audio/sound effects/CountdownSound.mp3" id="7_dnnux"]
[ext_resource type="Texture2D" uid="uid://xdwowx13amy1" path="res://assets/Player3/Player3Photo.png" id="7_t7hec"]
[ext_resource type="AudioStream" uid="uid://bjeh7mvl0lgor" path="res://audio/sound effects/StartingBell.mp3" id="8_13dgj"]
[ext_resource type="Texture2D" uid="uid://bkcaiun1l81ta" path="res://assets/Player4/Player4Photo.png" id="9_b3bk1"]

[node name="ScoreboardAndIcons" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.149849, 0.149849)
script = ExtResource("1_4loom")

[node name="Player1Icon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 607.279
offset_top = 58.0
offset_right = 647.279
offset_bottom = 98.0
scale = Vector2(4.45318, 4.45318)
texture = ExtResource("1_3o71d")

[node name="Player2Icon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1261.27
offset_top = 58.0
offset_right = 1301.27
offset_bottom = 98.0
scale = Vector2(4.45318, 4.45318)
texture = ExtResource("2_7taoh")

[node name="Player3Icon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 26.6935
offset_top = 58.0
offset_right = 66.6935
offset_bottom = 98.0
scale = Vector2(4.45318, 4.45318)
texture = ExtResource("4_41w2r")

[node name="Player4Icon" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1842.0
offset_top = 58.0
offset_right = 1882.0
offset_bottom = 98.0
scale = Vector2(4.45318, 4.45318)
texture = ExtResource("5_tjjn8")

[node name="Player1Photo" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 618.0
offset_top = 69.0
offset_right = 658.0
offset_bottom = 109.0
scale = Vector2(3.89967, 3.89967)
texture = ExtResource("4_5o7c6")

[node name="Player2Photo" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1272.0
offset_top = 69.0
offset_right = 1312.0
offset_bottom = 109.0
scale = Vector2(3.89967, 3.89967)
texture = ExtResource("5_utxid")

[node name="Player3Photo" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 69.0
offset_right = 78.0
offset_bottom = 109.0
scale = Vector2(3.89967, 3.89967)
texture = ExtResource("7_t7hec")

[node name="Player4Photo" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 1853.0
offset_top = 69.0
offset_right = 1893.0
offset_bottom = 109.0
scale = Vector2(3.89967, 3.89967)
texture = ExtResource("9_b3bk1")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 907.582
offset_top = 86.7542
offset_right = 1232.58
offset_bottom = 223.754
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 130
text = "6:59

"

[node name="Player1Health" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 533.871
offset_top = 233.568
offset_right = 858.869
offset_bottom = 476.568
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 100
text = "0
"
horizontal_alignment = 1

[node name="Player2Health" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1187.86
offset_top = 233.568
offset_right = 1512.86
offset_bottom = 476.568
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 100
text = "0

"
horizontal_alignment = 1

[node name="Player3Health" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -40.0404
offset_top = 233.568
offset_right = 284.96
offset_bottom = 476.568
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 100
text = "0

"
horizontal_alignment = 1

[node name="Player4Health" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1775.12
offset_top = 233.568
offset_right = 2100.12
offset_bottom = 476.568
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 100
text = "0

"
horizontal_alignment = 1

[node name="Player1Score" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 326.996
offset_top = 53.3871
offset_right = 651.994
offset_bottom = 296.387
theme_override_colors/font_color = Color(1, 0.808246, 0.641535, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1394.74
offset_top = 53.3871
offset_right = 1719.74
offset_bottom = 296.387
theme_override_colors/font_color = Color(0.69805, 0.573903, 0.991372, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="Player3Score" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -240.242
offset_top = 53.3871
offset_right = 84.7562
offset_bottom = 296.387
theme_override_colors/font_color = Color(0.804361, 1, 0.719593, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="Player4Score" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1975.32
offset_top = 53.3871
offset_right = 2300.32
offset_bottom = 296.387
theme_override_colors/font_color = Color(1, 0.952941, 0.737255, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="BlueTeamScore" type="Label" parent="."]
visible = false
offset_left = 246.915
offset_top = 53.3871
offset_right = 571.913
offset_bottom = 296.387
theme_override_colors/font_color = Color(0.44155, 0.741287, 0.982366, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="RedTeamScore" type="Label" parent="."]
visible = false
offset_left = 1488.16
offset_top = 53.3871
offset_right = 1813.16
offset_bottom = 296.387
theme_override_colors/font_color = Color(1, 0.421216, 0.352519, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 40
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 200
text = "0
"
horizontal_alignment = 1

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 424.0

[node name="Countdown" type="Label" parent="."]
z_index = 5
layout_mode = 0
offset_left = 874.213
offset_top = 413.75
offset_right = 1199.21
offset_bottom = 1608.75
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.215902, 0.215902, 0.215902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 30
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 100
theme_override_constants/shadow_outline_size = 80
theme_override_fonts/font = ExtResource("6_iwl44")
theme_override_font_sizes/font_size = 650
text = "3

"
horizontal_alignment = 1

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CountdownSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dnnux")
pitch_scale = 0.87
bus = &"UI"

[node name="BellSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_13dgj")
bus = &"UI"

[node name="EndOfMatchTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="MatchTimer" to="." method="_on_match_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="EndOfMatchTimer" to="." method="_on_end_of_match_timer_timeout"]
